--- a/rsp/runtimes/bundles/org.example.rsp.server.wonka.bundle/.classpath
+++ b/rsp/runtimes/bundles/org.example.rsp.server.wonka.bundle/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.apache.felix.log_1.2.0.jar"/>
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.eclipse.lsp4j.jsonrpc_0.7.0.v20190228-1517.jar"/>
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.everit.osgi.bundles.org.apache.xmlcommons.full_1.4.1.20150918.jar"/>
-	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.jboss.tools.rsp.api_0.20.0.201907091654.jar"/>
+	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.jboss.tools.rsp.api_0.20.0.201907091654.jar" sourcepath="/home/rob/code/work/jbtools/rsp/rsp-server/api/bundles/org.jboss.tools.rsp.api/src/main/java/org/jboss/tools/rsp/api/dao/util/CreateServerAttributesUtility.java"/>
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.jboss.tools.rsp.foundation.core_0.20.0.201907091654.jar"/>
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.jboss.tools.rsp.launching.java_0.20.0.201907091654.jar"/>
 	<classpathentry kind="lib" path="/home/rob/code/work/jbtools/rsp/extend-rsp-example/rsp/targetplatform/mavendeps/rsp-distribution/bundle/org.jboss.tools.rsp.launching_0.20.0.201907091654.jar"/>
