--- a/rsp/distribution/distribution.extras/pom.xml
+++ b/rsp/distribution/distribution.extras/pom.xml
@@ -5,13 +5,13 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.example.rsp.server.wonka</groupId>
+		<groupId>org.example.rsp.server.extras</groupId>
 		<artifactId>distribution</artifactId>
-		<version>0.20.0-SNAPSHOT</version>
+		<version>0.21.2-SNAPSHOT</version>
 	</parent>
-	<groupId>org.example.rsp.server.wonka.distribution</groupId>
-	<artifactId>org.example.rsp.server.wonka.distribution</artifactId>
-	<name>Runtime Server Protocol : Wonka Distribution</name>
+	<groupId>org.example.rsp.server.extras.distribution</groupId>
+	<artifactId>org.example.rsp.server.extras.distribution</artifactId>
+	<name>Runtime Server Protocol : Extras Distribution</name>
 	<packaging>eclipse-repository</packaging>
 
 	<properties>
