--- a/rsp/pom.xml
+++ b/rsp/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.example.rsp.server.wonka</groupId>
+	<groupId>org.example.rsp.server.extras</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.20.0-SNAPSHOT</version>
+	<version>0.21.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Runtime Server Protocol: Wonka</name>
+	<name>Runtime Server Protocol: extras</name>
 	<description>A runtime-server protocol based on LSP</description>
 	<licenses>
 		<license>
@@ -78,8 +78,8 @@
 					<pomDependencies>consider</pomDependencies>
 					<target>
 						<artifact>
-							<groupId>org.example.rsp.server.wonka</groupId>
-							<artifactId>rsp-target</artifactId>
+							<groupId>org.example.rsp.server.extras</groupId>
+							<artifactId>rsp-extras-target</artifactId>
 							<version>${project.version}</version>
 						</artifact>
 					</target>
