--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -5,15 +5,15 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.wonka</groupId>
+    <groupId>org.example.rsp.server.extras</groupId>
     <artifactId>runtimes</artifactId>
-    <version>0.20.0-SNAPSHOT</version>
+    <version>0.21.2-SNAPSHOT</version>
   </parent>
-  <groupId>org.example.rsp.server.wonka</groupId>
+  <groupId>org.example.rsp.server.extras</groupId>
   <artifactId>bundles</artifactId>
   <packaging>pom</packaging>
 
   <modules>
-    <module>org.example.rsp.server.wonka.bundle</module>
+    <module>org.jboss.tools.rsp.server.tomcat</module>
   </modules>
 </project>
