--- a/rsp/runtimes/pom.xml
+++ b/rsp/runtimes/pom.xml
@@ -5,15 +5,16 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.wonka</groupId>
+    <groupId>org.example.rsp.server.extras</groupId>
     <artifactId>parent</artifactId>
-    <version>0.20.0-SNAPSHOT</version>
+    <version>0.21.2-SNAPSHOT</version>
   </parent>
   <artifactId>runtimes</artifactId>
-  <groupId>org.example.rsp.server.wonka</groupId>
+  <groupId>org.example.rsp.server.extras</groupId>
   <packaging>pom</packaging>
 
   <modules>
     <module>bundles</module>
   </modules>
+<version>0.21.2-SNAPSHOT</version>
 </project>
