--- a/rsp/targetplatform/pom.xml
+++ b/rsp/targetplatform/pom.xml
@@ -3,11 +3,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.wonka</groupId>
+    <groupId>org.example.rsp.server.extras</groupId>
     <artifactId>parent</artifactId>
-    <version>0.20.0-SNAPSHOT</version>
+    <version>0.21.2-SNAPSHOT</version>
   </parent>
-  <groupId>org.example.rsp.server.wonka</groupId>
-  <artifactId>rsp-target</artifactId>
+  <groupId>org.example.rsp.server.extras</groupId>
+  <artifactId>rsp-extras-target</artifactId>
   <packaging>eclipse-target-definition</packaging>
+<version>0.21.2-SNAPSHOT</version>
 </project>
