--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.tomcat/pom.xml
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.tomcat/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jboss.tools.rsp.runtimes</groupId>
+    <groupId>org.example.rsp.server.extras</groupId>
     <artifactId>bundles</artifactId>
-    <version>0.20.1-SNAPSHOT</version>
+    <version>0.21.2-SNAPSHOT</version>
   </parent>
   <groupId>org.jboss.tools.rsp.runtimes.bundles</groupId>
   <artifactId>org.jboss.tools.rsp.server.tomcat</artifactId>
