--- a/vscode/package.json
+++ b/vscode/package.json
@@ -33,8 +33,6 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
     "update-deps": "node_modules/.bin/ncu --upgrade --loglevel verbose --packageFile package.json && npm update",
     "coverage:upload": "codecov -f coverage/coverage-final.json",
     "build": "npm run compile && npm run package"
@@ -63,7 +61,8 @@
     "sinon-chai": "^3.3.0",
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "vscode-test": "^1.2.0"
   },
   "dependencies": {
     "expand-home-dir": "0.0.3",
