Add support for locating, downloading, start and stop of apache felix
Signed-off-by: Rob Stryker <rob@oxbeef.net>

--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -15,5 +15,6 @@
 
   <modules>
     <module>org.jboss.tools.rsp.server.tomcat</module>
+    <module>org.jboss.tools.rsp.server.felix</module>
   </modules>
 </project>
