--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.felix/build.properties
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.felix/build.properties
@@ -1,5 +1,8 @@
-source.. = src/main/java
-output.. = target/classes
+source.. = src/main/java,\
+           src/main/resources/
+output.. = target/classes,\
+           bin/
 bin.includes = META-INF/,\
                .,\
-               src/main/java/
+               src/main/java/,\
+               src/main/resources/
