--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -14,6 +14,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>org.jboss.tools.rsp.server.generic</module>
     <module>org.jboss.tools.rsp.server.tomcat</module>
     <module>org.jboss.tools.rsp.server.felix</module>
   </modules>
