--- a/rsp/distribution/pom.xml
+++ b/rsp/distribution/pom.xml
@@ -5,11 +5,11 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.extras</groupId>
     <artifactId>parent</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
-  <groupId>org.example.rsp.server.extras</groupId>
+  <groupId>org.jboss.tools.rsp.server.extras</groupId>
   <artifactId>distribution</artifactId>
   <name>Runtime Server Protocol : Distribution Parent</name>
   <packaging>pom</packaging>
