--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.tomcat/pom.xml
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.tomcat/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.extras</groupId>
     <artifactId>bundles</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
