--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -5,16 +5,15 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.extras</groupId>
     <artifactId>runtimes</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
-  <groupId>org.example.rsp.server.extras</groupId>
+  <groupId>org.jboss.tools.rsp.server.extras</groupId>
   <artifactId>bundles</artifactId>
   <packaging>pom</packaging>
 
   <modules>
-    <module>org.jboss.tools.rsp.server.generic</module>
     <module>org.jboss.tools.rsp.server.tomcat</module>
     <module>org.jboss.tools.rsp.server.felix</module>
     <module>org.jboss.tools.rsp.server.karaf</module>
