--- a/rsp/runtimes/pom.xml
+++ b/rsp/runtimes/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.example.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.extras</groupId>
     <artifactId>parent</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
   <artifactId>runtimes</artifactId>
-  <groupId>org.example.rsp.server.extras</groupId>
+  <groupId>org.jboss.tools.rsp.server.extras</groupId>
   <packaging>pom</packaging>
 
   <modules>
