--- a/rsp/distribution/pom.xml
+++ b/rsp/distribution/pom.xml
@@ -5,13 +5,13 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jboss.tools.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.apache</groupId>
     <artifactId>parent</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
-  <groupId>org.jboss.tools.rsp.server.extras</groupId>
+  <groupId>org.jboss.tools.rsp.server.apache</groupId>
   <artifactId>distribution</artifactId>
-  <name>Runtime Server Protocol : Distribution Parent</name>
+  <name>Runtime Server Protocol : Apache Distribution Parent</name>
   <packaging>pom</packaging>
 
   <properties>
@@ -19,6 +19,6 @@
   </properties>
 
   <modules>
-    <module>distribution.extras</module>
+    <module>distribution.apache</module>
   </modules>
 </project>
