--- a/rsp/site/pom.xml
+++ b/rsp/site/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jboss.tools.rsp.server.extras</groupId>
+		<groupId>org.jboss.tools.rsp.server.apache</groupId>
 		<artifactId>parent</artifactId>
 		<version>0.22.3-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools.rsp.server.extras</groupId>
+	<groupId>org.jboss.tools.rsp.server.apache</groupId>
 	<artifactId>site</artifactId>
 	
 	<packaging>eclipse-repository</packaging>
