--- a/rsp/targetplatform/pom.xml
+++ b/rsp/targetplatform/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jboss.tools.rsp.server.extras</groupId>
+    <groupId>org.jboss.tools.rsp.server.apache</groupId>
     <artifactId>parent</artifactId>
     <version>0.22.3-SNAPSHOT</version>
   </parent>
-  <artifactId>rsp-extras-target</artifactId>
+  <artifactId>rsp-apache-target</artifactId>
   <packaging>eclipse-target-definition</packaging>
 </project>
