--- a/rsp/distribution/distribution.community/pom.xml
+++ b/rsp/distribution/distribution.community/pom.xml
@@ -5,13 +5,13 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jboss.tools.rsp.server.apache</groupId>
+		<groupId>org.jboss.tools.rsp.server.community</groupId>
 		<artifactId>distribution</artifactId>
-		<version>0.22.3-SNAPSHOT</version>
+		<version>0.22.4-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools.rsp.server.apache.distribution</groupId>
-	<artifactId>org.jboss.tools.rsp.server.apache.distribution</artifactId>
-	<name>Runtime Server Protocol : Apache Distribution</name>
+	<groupId>org.jboss.tools.rsp.server.community.distribution</groupId>
+	<artifactId>org.jboss.tools.rsp.server.community.distribution</artifactId>
+	<name>Runtime Server Protocol : Community Distribution</name>
 	<packaging>eclipse-repository</packaging>
 
 	<properties>
