--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.felix/pom.xml
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.felix/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jboss.tools.rsp.server.apache</groupId>
+    <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>bundles</artifactId>
-    <version>0.22.3-SNAPSHOT</version>
+    <version>0.22.4-SNAPSHOT</version>
   </parent>
   <groupId>org.jboss.tools.rsp.runtimes.bundles</groupId>
   <artifactId>org.jboss.tools.rsp.server.felix</artifactId>
