Add .vscode folder for debugging, add activation event onView:serversAB
Signed-off-by: Rob Stryker <rob@oxbeef.net>

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -16,7 +16,8 @@
     "vscode": "^1.34.0"
   },
   "activationEvents": [
-    "onView:servers"
+    "onView:servers",
+    "onView:serversAB"
   ],
   "categories": [
     "Other"
