Add a deploy-only server
Signed-off-by: Rob Stryker <rob@oxbeef.net>

--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.folder/.project
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.folder/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jboss.tools.rsp.server.generic</name>
+	<name>org.jboss.tools.rsp.server.folder</name>
 	<comment></comment>
 	<projects>
 	</projects>
