--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -17,5 +17,6 @@
     <module>org.jboss.tools.rsp.server.tomcat</module>
     <module>org.jboss.tools.rsp.server.felix</module>
     <module>org.jboss.tools.rsp.server.karaf</module>
+    <module>org.jboss.tools.rsp.server.folder</module>
   </modules>
 </project>
