Add a glassfish adapter
Signed-off-by: Rob Stryker <rob@oxbeef.net>

--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -18,6 +18,7 @@
     <module>org.jboss.tools.rsp.server.felix</module>
     <module>org.jboss.tools.rsp.server.karaf</module>
     <module>org.jboss.tools.rsp.server.jetty</module>
+    <module>org.jboss.tools.rsp.server.glassfish</module>
     <module>org.jboss.tools.rsp.server.folder</module>
   </modules>
 </project>
