RSP Support for Payara Server 5.x
Signed-off-by: Gaurav Gupta <gaurav.gupta@payara.fish>

--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -19,6 +19,7 @@
     <module>org.jboss.tools.rsp.server.karaf</module>
     <module>org.jboss.tools.rsp.server.jetty</module>
     <module>org.jboss.tools.rsp.server.glassfish</module>
+    <module>org.jboss.tools.rsp.server.payara</module>
     <module>org.jboss.tools.rsp.server.folder</module>
   </modules>
 </project>
