--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -20,6 +20,7 @@
     <module>org.jboss.tools.rsp.server.jetty</module>
     <module>org.jboss.tools.rsp.server.glassfish</module>
     <module>org.jboss.tools.rsp.server.payara</module>
+    <module>org.jboss.tools.rsp.server.liberty</module>
     <module>org.jboss.tools.rsp.server.folder</module>
   </modules>
 </project>
