--- a/vscode/package.json
+++ b/vscode/package.json
@@ -36,45 +36,48 @@
     "test": "npm run compile && node ./out/test/test-runner.js",
     "update-deps": "node_modules/.bin/ncu --upgrade --loglevel verbose --packageFile package.json && npm update",
     "coverage:upload": "codecov -f coverage/coverage-final.json",
-    "build": "npm run compile && npm run package"
+    "build": "npm run compile && npm run package",
+    "lint": "eslint src test --fix"
   },
   "extensionDependencies": [
     "redhat.vscode-rsp-ui"
   ],
   "devDependencies": {
+    "@types/fs-extra": "^9.0.12",
     "@types/glob": "^7.1.1",
-    "@types/mocha": "^5.2.7",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^12.12.35",
     "@types/sinon": "^7.0.13",
+    "@types/tcp-port-used": "^1.0.0",
     "@types/vscode": "^1.30.0",
+    "@types/wait-on": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "codecov": "^3.7.1",
     "decache": "^4.5.1",
     "decompress": "^4.2.1",
-    "download": "^7.1.0",
+    "eslint": "^7.32.0",
     "glob": "^7.1.4",
     "istanbul": "^0.4.5",
-    "mocha": "^6.1.4",
+    "mocha": "^9.1.0",
     "mocha-jenkins-reporter": "^0.4.1",
     "remap-istanbul": "^0.13.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
-    "tslint": "^5.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.5.2",
+    "typescript": "^4.0.3",
     "vscode-test": "^1.2.3"
   },
   "dependencies": {
     "expand-home-dir": "0.0.3",
-    "find-java-home": "^0.2.0",
-    "fs-extra": "7.0.0",
+    "find-java-home": "^1.2.2",
+    "fs-extra": "^10.0.0",
     "path": "0.12.7",
-    "path-exists": "^3.0.0",
+    "path-exists": "^4.0.0",
     "portfinder": "^1.0.20",
-    "rsp-client": "^0.15.0",
+    "rsp-client": "^0.23.0",
     "tcp-port-used": "^1.0.1",
     "vscode-server-connector-api": "0.1.7",
-    "wait-on": "^5.0.3"
+    "wait-on": "^6.0.0"
   }
 }
