--- a/rsp/runtimes/bundles/org.jboss.tools.rsp.server.jetty/pom.xml
+++ b/rsp/runtimes/bundles/org.jboss.tools.rsp.server.jetty/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>bundles</artifactId>
-    <version>0.25.8-SNAPSHOT</version>
+    <version>0.25.9.Final</version>
   </parent>
   <groupId>org.jboss.tools.rsp.runtimes.bundles</groupId>
   <artifactId>org.jboss.tools.rsp.server.jetty</artifactId>
