--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>runtimes</artifactId>
-    <version>0.26.6.Final</version>
+    <version>0.26.7-SNAPSHOT</version>
   </parent>
   <groupId>org.jboss.tools.rsp.server.community</groupId>
   <artifactId>bundles</artifactId>
