--- a/rsp/targetplatform/pom.xml
+++ b/rsp/targetplatform/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>parent</artifactId>
-    <version>0.26.8.Final</version>
+    <version>0.26.9-SNAPSHOT</version>
   </parent>
   <artifactId>rsp-community-target</artifactId>
   <packaging>eclipse-target-definition</packaging>
