--- a/vscode/package.json
+++ b/vscode/package.json
@@ -90,6 +90,8 @@
     "vscode-test": "^1.2.3"
   },
   "dependencies": {
+    "@redhat-developer/vscode-extension-proposals": "^0.0.14",
+    "@redhat-developer/vscode-redhat-telemetry": "0.4.2",
     "expand-home-dir": "0.0.3",
     "find-java-home": "^1.2.2",
     "fs-extra": "^10.0.0",
