Move extension to v0_26_12.Final for release
Signed-off-by: Rob Stryker <rob@oxbeef.net>

--- a/rsp/runtimes/bundles/pom.xml
+++ b/rsp/runtimes/bundles/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>runtimes</artifactId>
-    <version>0.26.12-SNAPSHOT</version>
+    <version>0.26.12.Final</version>
   </parent>
   <groupId>org.jboss.tools.rsp.server.community</groupId>
   <artifactId>bundles</artifactId>
