--- a/rsp/distribution/pom.xml
+++ b/rsp/distribution/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jboss.tools.rsp.server.community</groupId>
     <artifactId>parent</artifactId>
-    <version>0.26.17-SNAPSHOT</version>
+    <version>0.26.17.Final</version>
   </parent>
   <groupId>org.jboss.tools.rsp.server.community</groupId>
   <artifactId>distribution</artifactId>
